# Gpgmp

./: CMakeLists.txt  main.cpp  readme.md
include/: gpgmp.hpp  grid.hpp  multiparticle.cuh  multiparticle.hpp  ssa.hpp
src/: gpgmp.cpp  gpgmp.cu  main.cpp  multiparticle.cpp  multiparticle.cu  ssa.cpp  ssa.cu
tests/: GpgmpTest.cpp  MultiparticleCpuBenchmark.cpp  MultiparticleGpuBenchmark.cpp  MultiparticleGpuTest.cpp  MultiparticleTest.cpp  SsaTest.cpp
